@@ -1,4 +1,4 @@
-#Tue Feb 13 07:54:36 EST 2007
+#Wed Feb 14 11:19:24 EST 2007
 major_version=1.6b
-minor_version=40
+minor_version=41
 app_name=eLife
