@@ -1,4 +1,10 @@
-== 13/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b39.zip V1.6b39]  ==
+== 14/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b41.zip V1.6b41]  ==
+
+''' Tutundo '''
+
+Fixed tutondo volume command code. Resolves ticket [ticket:606]
+
+== 13/Feb/07 Released [attachment:wiki:SoftwareReleases:eLife-1.6b40.zip V1.6b40]  ==
 
 ''' Tutundo '''
 
